src/test/ui/missing/missing-macro-use.stderr
error: cannot find macro `macro_two!` in this scope
  --> $DIR/missing-macro-use.rs:6:5
   |
LL |     macro_two!();
   |     ^^^^^^^^^

error: aborting due to previous error

